CSS fix to prevent Content actions from being hidden by the gallery

--- a/collective/plonetruegallery/browser/files/style.css
+++ b/collective/plonetruegallery/browser/files/style.css
@@ -75,3 +75,7 @@ div.spacer {
     font-size: 1px;
     line-height: 1px;
 }
+
+.template-galleryview .contentActions {
+	z-index: 12;
+}
